@@ -305,6 +305,9 @@
 #' \item \code{drop.data}: If \code{TRUE} (default) only the data involved in the model
 #' is passed to MLwiN, otherwise the entire dataset in \code{data} is passed.
 #'
+#' \item \code{drop.levels}: If \code{TRUE} (default) any unused levels are dropped from factors, otherwise the dataset
+#' is left unchanged.
+#'
 #' \item \code{fpsandwich}: specifies standard error type for fixed parameters. If
 #' \code{fpsandwich = TRUE}, robust or `sandwich' standard errors based on raw
 #' residuals are used, if \code{fpsandwich = FALSE} (default) then standard,
@@ -597,6 +600,11 @@ runMLwiN <- function(Formula, levID = NULL, D = "Normal", data = NULL, estoption
     }
   }
 
+  drop.levels <- estoptions$drop.levels
+  if (is.null(drop.levels)) {
+    drop.levels <- TRUE
+  }
+
   if (oldsyntax) {
     if (is.character(Formula)) {
       Formula <- gsub("\\{", "\\(", Formula)
@@ -629,6 +637,10 @@ runMLwiN <- function(Formula, levID = NULL, D = "Normal", data = NULL, estoption
         indata[[var]] <- newdata[[var]]
       }
     }
+  }
+
+  if (drop.levels) {
+    indata <- droplevels(indata)
   }
 
   EstM <- estoptions$EstM
